--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "material-kit-react",
-  "version": "4.0.0",
-  "author": "Devias",
+  "name": "railway-reservation-system",
+  "version": "1.0.0",
+  "author": "Nabin Ghosh",
   "licence": "MIT",
-  "homepage": "https://devias.io",
+  "homepage": "http://localhost:3000/auth/sign-in",
   "private": false,
   "scripts": {
     "dev": "next dev",
@@ -37,6 +37,7 @@
     "react": "^18.2.0",
     "react-apexcharts": "1.4.1",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "7.51.0",
     "zod": "3.22.4"
   },
